--- a/index.html
+++ b/index.html
@@ -1,66 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR Animated 3D Model</title>
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        model-viewer {
-            width: 100%;
-            height: 80vh;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 18px;
-            margin-top: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AR Animated 3D Model</title>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 100vh;
+      background-color: #f0f0f0;
+    }
+    model-viewer {
+      width: 100%;
+      height: 80vh;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 18px;
+      margin-top: 10px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
 
-    <model-viewer 
-        id="arModel"
-        src="vrikshasana.glb"
-        ar 
-        ar-modes="webxr scene-viewer quick-look"
-        ar-placement="floor"
-        camera-controls 
-        auto-rotate 
-        animation-name="*" 
-        autoplay>
-    </model-viewer>
+  <model-viewer 
+    id="arModel"
+    src="vrikshasana.glb"
+    ar 
+    ar-modes="webxr scene-viewer quick-look"
+    ar-placement="floor"
+    camera-controls 
+    auto-rotate 
+    animation-name="*" 
+    autoplay>
+  </model-viewer>
 
-    <!-- Custom Button to Trigger AR -->
-    <button onclick="enterAR()">View in AR</button>
+  <button onclick="enterAR()">View in AR</button>
 
-    <script>
-        function enterAR() {
-            const modelViewer = document.getElementById("arModel");
-            if (modelViewer.canActivateAR) {
-                modelViewer.activateAR();
-            } else {
-                alert("AR is not supported on this device or browser.");
-            }
-        }
-    </script>
+  <script>
+    function speakInstruction() {
+      const instruction = `Welcome! Let's do the Vrikshasana or Tree Pose. 
+        Stand straight, shift your weight to one leg, raise the other foot and rest it on your inner thigh. 
+        Bring your palms together in prayer position. Breathe deeply and maintain your balance.`;
+
+      const utterance = new SpeechSynthesisUtterance(instruction);
+      utterance.lang = "en-US";
+      utterance.pitch = 1;
+      utterance.rate = 1;
+      speechSynthesis.speak(utterance);
+    }
+
+    function enterAR() {
+      const modelViewer = document.getElementById("arModel");
+      if (modelViewer.canActivateAR) {
+        modelViewer.activateAR();
+        speakInstruction(); // Play the audio
+      } else {
+        alert("AR is not supported on this device or browser.");
+      }
+    }
+  </script>
 
 </body>
 </html>
